# SS-Actions-Auto-Version

./: Dockerfile  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/: release-drafter.yml  release.yml
.github/workflows/: CI.yml  release-drafter.yml  release.yml
app/: main.py
app/routers/: main.py
