[tool.poetry]
name = "ss-sample-python-api"
version = "0.1.0"
description = "Sample SS project."
authors = ["Roman Ivaniuk"]
license = "AGPL-3.0"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
